k8s/staging/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: staging
  name: juicypie-backend-staging-service
spec:
  selector:
    app: juicypie-backend-staging
  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: http
