k8s/staging/ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: staging
  name: juicypie-backend-staging-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
spec:
  rules:
  - host: api-staging.juicypie.com
    http:
      paths:
      - path: /
        backend:
          serviceName: juicypie-backend-staging-service
          servicePort: 9200
